yaml/nginx-flex-kv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-flex-kv
spec:
  containers:
  - name: nginx-flex-kv
    image: nginx
    volumeMounts:
    - name: test
      mountPath: /kvmnt
      readOnly: true
  volumes:
  - name: test
    flexVolume:
      driver: "azure/kv"
      secretRef:
        name: kvcreds                  # [OPTIONAL] not required if using Pod Identity
      options:
        usepodidentity: "false"        # [OPTIONAL] if not provided, will default to "false"
        keyvaultname: "openhack"               # the name of the KeyVault
        keyvaultobjectnames: sqlpwd    # list of KeyVault object names (semi-colon separated)
        keyvaultobjecttypes: secret  # list of KeyVault object types: secret, key or cert (semi-colon separated)
        keyvaultobjectversions: ""     # [OPTIONAL] list of KeyVault object versions (semi-colon separated), will get latest if empty
        resourcegroup: "teamResources"              # [REQUIRED FOR < v0.0.14] the resource group of the KeyVault
        subscriptionid: "f8631591-5e14-4e47-be2c-d1b303e8c181"             # [REQUIRED FOR < v0.0.14] the subscription ID of the KeyVault
        tenantid: "b4bc8b48-5d75-4724-84b5-e68fd9f1263b"                   # the tenant ID of the KeyVault
