yaml/ingressapi.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openhack-ingressapi
  namespace: openhackapi
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips
